--- a/design_guide.html
+++ b/design_guide.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <section>
-        <h1>Lorem ipsum </h1>
+        <h1>Cars</h1>
         <h2>Lorem ipsum dolor sit amet consectetur adipisicing eli</h2>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod incidunt amet numquam porro placeat dolor aperiam consequatur maxime eaque, corrupti quisquam dolore iure repudiandae delectus excepturi, eos cupiditate obcaecati rerum.</p>
     </section>
